--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Only the JS at the bottom is different from previous version -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,7 +27,6 @@
       padding: 4px;
       overflow-y: auto;
       color: var(--text-color);
-      font-family: var(--font-family);
       scrollbar-width: none;
       -ms-overflow-style: none;
     }
@@ -85,25 +83,40 @@
     }
 
     #team-popup {
-      position: absolute;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background-color: #1e293b;
       color: white;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-      border-radius: 0.75rem;
-      padding: 0.75rem;
-      border: 1px solid #334155;
-      z-index: 9999;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
       text-align: center;
-      font-size: 0.75rem;
-      width: 180px;
+      z-index: 9999;
       display: none;
+      width: 90%;
+      max-width: 320px;
     }
 
     #team-popup img {
-      width: 40px;
-      height: 40px;
-      border-radius: 9999px;
-      margin-bottom: 0.5rem;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-bottom: 0.75rem;
+      object-fit: cover;
+      background: white;
+    }
+
+    #popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 9998;
+      display: none;
     }
   </style>
 </head>
@@ -121,11 +134,12 @@
     </table>
   </div>
 
-  <!-- Popup Info -->
+  <!-- Popup Overlay & Box -->
+  <div id="popup-overlay"></div>
   <div id="team-popup">
-    <img id="popup-badge" src="" alt="Team badge" />
-    <div id="popup-name" class="font-bold mb-1"></div>
-    <div id="popup-position" class="text-slate-300 text-sm"></div>
+    <img id="popup-badge" src="" alt="Team badge" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Noun_Project_team_icon_1452173_cc.svg/240px-Noun_Project_team_icon_1452173_cc.svg.png'" />
+    <div id="popup-name" style="font-weight: bold; margin-bottom: 0.5rem;"></div>
+    <div id="popup-position" style="font-size: 0.75rem; color: #cbd5e1;"></div>
   </div>
 
   <script>
@@ -177,6 +191,7 @@
 
     document.addEventListener('DOMContentLoaded', () => {
       const popup = document.getElementById('team-popup');
+      const overlay = document.getElementById('popup-overlay');
       const badge = document.getElementById('popup-badge');
       const name = document.getElementById('popup-name');
       const position = document.getElementById('popup-position');
@@ -184,23 +199,23 @@
       document.addEventListener('click', e => {
         const row = e.target.closest('.team-row');
 
-        // If clicking outside the popup or row, hide it
         if (!row) {
           popup.style.display = 'none';
+          overlay.style.display = 'none';
           return;
         }
 
-        // Set popup content
         badge.src = row.dataset.badge;
         name.textContent = row.dataset.name;
         position.textContent = `Position: ${row.dataset.position}`;
 
-        // Position the popup
-        const rect = row.getBoundingClientRect();
-        popup.style.left = `${rect.left + window.scrollX + row.offsetWidth}px`;
-        popup.style.top = `${rect.top + window.scrollY}px`;
-
         popup.style.display = 'block';
+        overlay.style.display = 'block';
+      });
+
+      overlay.addEventListener('click', () => {
+        popup.style.display = 'none';
+        overlay.style.display = 'none';
       });
     });
   </script>
